# nine-or-null

./: .clang-format  .gitignore  LICENSE  README.md
cpp/: CMakeLists.txt
cpp/src/: CMakeLists.txt  cli.cpp  gui.cpp
cpp/src/nine_or_null/: CMakeLists.txt  nine_or_null.cpp  nine_or_null.h
nine-or-null/: nine-or-null.afdesign  nine-or-null.py  nine_or_null.ipynb  pyproject.toml
nine-or-null/nine_or_null/: __init__.py  __main__.py  cli.py  gui.py
nine-or-null/tests/: test_nine_or_null.py
rhythm-analyzer/: pyproject.toml  rhythm_analyzer.ipynb
