[tool.poetry]
name = "rhythm-analyzer"
version = "0.1.0"
description = ""
authors = ["Telperion <twice.invisible@gmail.com>"]
readme = "README.md"
packages = [{include = "rhythm_analyzer"}]

[tool.poetry.dependencies]
python = "^3.9"
simfile = "^2.1.1"
jupyter = "^1.0.0"
numpy = "^1.24.2"
matplotlib = "^3.6.3"
svg-py = "^1.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
